--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,10 +4,19 @@
 /*! purgecss end ignore */
 @tailwind utilities;
 
-.bg_image {
+/* .landingSection {
     width: 1920px;
     height: 800px;
     object-fit: cover;
+    z-index: 10;
+} */
+
+.landingSection {
+    object-fit: cover;
+    width: 100%;
+    max-width: 1920px;
+    height: 100%;
+    max-height: 800px;
 }
 
 
