--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,9 +14,9 @@
 .landingSection {
     
     width: 100%;
-    max-width: 1920px;
-    height: 100%;
-    max-height: 800px;
+    max-width: 100vw;
+    height: 45vw;
+    min-height: 45vw;
 }
 
 
