--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,9 +15,15 @@
     
     width: 100%;
     max-width: 100vw;
-    height: 45vw;
-    min-height: 45vw;
+    height: 40vw;
+    min-height: 40vw;
 }
+
+@media screen and (max-width: 600px) {
+    .landingSection {
+      min-height: 70vw;
+    }
+  }
 
 
 
