--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,27 @@
     }
   }
 
+ .animate-text {
+  animation: 
+  typing 3.5s steps(30, end),
+  blink-caret .5s step-end infinite;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+/* The typing effect */
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: orange }
+}
+  
+
   
 
 
