--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,8 +44,100 @@ to { width: 100% }
 from, to { border-color: transparent }
 50% { border-color: orange }
 }
-  
 
+
+/* FLIP CARDS */
+.flipCards {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  background-color: #fed7e2;
+  padding-top: 5rem;
+  height: 70%; 
+  border-top: 1px solid #ec9eb4;
+}
+
+
+/* .maincontainer{
+  display:flex;
+  position: absolute;
+  width: 250px;
+  height: 320px;
+  background: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+} */
+
+/* THE CARD HOLDS THE FRONT AND BACK FACES */
+.thecard{
+  position: relative;
+  /* top: 0; */
+  /* left: 0; */
+  width: 20%;
+  height: 90%;
+  margin:30px;
+  margin-left:20px;
+  border-radius: 10px;
+  transform-style: preserve-3d;
+  transition: all 0.8s ease;
+  /* transform: translate(-5%, -5%); */
+}
+
+/* THE PSUEDO CLASS CONTROLS THE FLIP ON MOUSEOVER AND MOUSEOUT */
+.thecard:hover{
+  transform: rotateY(180deg);
+}
+
+/* THE FRONT FACE OF THE CARD, WHICH SHOWS BY DEFAULT */
+ .thefront{
+  position: absolute;
+  /* top: 0; */
+  /* left: 0; */
+  width: 100%;
+  height: 100%;
+  padding:20px;
+  border-radius: 10px;
+  backface-visibility: hidden;
+  overflow: hidden;
+  background: rgb(228, 50, 80);
+  color: #000;
+}
+
+/* THE BACK FACE OF THE CARD, WHICH SHOWS ON MOUSEOVER */
+.theback{
+  position: absolute;
+  /* top: 0; */
+  /* left: 0; */
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  backface-visibility: hidden;
+  overflow: hidden;
+  background: #fafafa;
+  color: #333;
+  text-align: center;
+  transform: rotateY(180deg);
+}
+
+
+/*This block (starts here) is merely styling for the flip card, and is NOT an essential part of the flip code */
+.thefront h1, .theback h1{
+  font-family: 'zilla slab', sans-serif;
+  padding: 30px;
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+}
+
+.thefront p, .theback p{
+  font-family: 'zilla slab', sans-serif;
+  padding: 30px;
+  font-weight: normal;
+  font-size: 12px;
+  text-align: center;
+}
   
 
 
