--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,10 @@
     min-height: 40vw;
 }
 
+.backgroundImage {
+  
+}
+
 @media screen and (max-width: 600px) {
     .landingSection {
       min-height: 70vw;
