--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,8 +14,8 @@
 .landingSection {
     width: 100%;
     max-width: 100vw;
-    height: 40vw;
-    min-height: 40vw;
+    height: 35vw;
+    min-height: 35vw;
 }
 
 @media screen and (max-width: 600px) {
@@ -45,6 +45,23 @@ from, to { border-color: transparent }
 }
 
 
+/* Info Register */
+.infoRegister {
+  display:flex;
+  flex-wrap: wrap;
+  height: 60em;
+}
+.infoBlue {
+  width: 50%;
+  margin-left: auto;
+  background-color: #bee3f8;
+}
+.infoPink {
+  width: 50%;
+  margin-right: auto;
+  background-color: #fbb6ce;
+}
+
 /* FLIP CARDS */
 .flipCards {
   display: flex;
@@ -55,19 +72,6 @@ from, to { border-color: transparent }
   height: 70%; 
   border-top: 1px solid #ec9eb4;
 }
-
-
-/* .maincontainer{
-  display:flex;
-  position: absolute;
-  width: 250px;
-  height: 320px;
-  background: none;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-} */
 
 /* THE CARD HOLDS THE FRONT AND BACK FACES */
 .thecard{
