--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,8 @@
     z-index: 10;
 } */
 
+
+
 .landingSection {
     width: 100%;
     max-width: 100vw;
@@ -49,7 +51,7 @@ from, to { border-color: transparent }
 .infoRegister {
   display:flex;
   flex-wrap: wrap;
-  height: 55em;
+  height: 100vh;
 }
 .infoBlue {
   width: 50%;
@@ -80,6 +82,35 @@ from, to { border-color: transparent }
   background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD;
   box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
 } 
+
+
+/* // OUR VISION */
+
+.visions {
+  height: 95vh;
+  width: 100%;
+  background-color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* FLIP CARDS */
 .flipCards {
