--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,8 +56,9 @@ from, to { border-color: transparent }
 .infoBlue {
   width: 50%;
   margin-left: auto;
-  background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #E4ECFF;
-  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+  background: #fdfafc;
+  /* background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD; */
+  /* box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .regButton {
@@ -79,8 +80,8 @@ from, to { border-color: transparent }
 .infoPink {
   width: 50%;
   margin-right: auto;
-  background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD;
-  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+  background: #fdfafc;
+  /* box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25); */
 } 
 
 
@@ -100,12 +101,14 @@ from, to { border-color: transparent }
 /* FLIP CARDS */
 .flipCards {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
   flex-direction: row;
-  background-color: #fed7e2;
+  background: #fdfafc;
   padding-top: 5rem;
-  height: 70%; 
-  border-top: 1px solid #ec9eb4;
+  padding-bottom: 5rem;
+  height: 40%; 
+  /* border-top: 1px solid #ec9eb4; */
 }
 
 /* THE CARD HOLDS THE FRONT AND BACK FACES */
@@ -115,7 +118,7 @@ from, to { border-color: transparent }
   /* left: 0; */
   width: 20%;
   height: 90%;
-  margin:30px;
+  /* margin:30px; */
   margin-left:20px;
   border-radius: 10px;
   transform-style: preserve-3d;
@@ -139,7 +142,8 @@ from, to { border-color: transparent }
   border-radius: 10px;
   backface-visibility: hidden;
   overflow: hidden;
-  background: rgb(228, 50, 80);
+  background: white;
+  box-shadow: 2px 2px 2px 2px rgb(225, 46, 139) ;
   color: #000;
 }
 
@@ -153,7 +157,7 @@ from, to { border-color: transparent }
   border-radius: 10px;
   backface-visibility: hidden;
   overflow: hidden;
-  background: #fafafa;
+  background: white;
   color: #333;
   text-align: center;
   transform: rotateY(180deg);
@@ -197,7 +201,8 @@ from, to { border-color: transparent }
 .App {
   text-align: center;
   position: relative;
-  background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD; 
+  /* background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD;  */
+  background: white; 
 }
 
 .App-logo {
