--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,38 +12,18 @@
 } */
 
 
+/* //Börjar om på sidan CSS styling */
 
-.landingSection {
-    width: 100%;
-    max-width: 100vw;
-    height: 35vw;
-    min-height: 35vw;
-}
 
-@media screen and (max-width: 600px) {
-    .landingSection {
-      min-height: 70vw;
-    }
-  }
 
- .animate-text {
-  animation: 
-  typing 2.0s steps(30, end),
-  blink-caret .1s step-end infinite;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-/* The typing effect */
-@keyframes typing {
-from { width: 0 }
-to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-from, to { border-color: transparent }
-50% { border-color: orange }
+.rutan {
+  background-image: url(../images/header.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  background-size: contain;
+  height: 40rem;
+  
 }
 
 
@@ -85,6 +65,61 @@ from, to { border-color: transparent }
 } 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.landingSection {
+    width: 100%;
+    max-width: 100vw;
+    height: 35vw;
+    min-height: 35vw;
+}
+
+@media screen and (max-width: 600px) {
+    .landingSection {
+      min-height: 70vw;
+    }
+  }
+
+ .animate-text {
+  animation: 
+  typing 2.0s steps(30, end),
+  blink-caret .1s step-end infinite;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+/* The typing effect */
+@keyframes typing {
+from { width: 0 }
+to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+from, to { border-color: transparent }
+50% { border-color: orange }
+}
+
+
+
+
+
 /* // OUR VISION */
 
 .visions {
@@ -100,10 +135,6 @@ from, to { border-color: transparent }
 
 /* FLIP CARDS */
 .flipCards {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: row;
   margin-top:100px;
   background: white;
   padding-top: 5rem;
