--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,7 +146,8 @@ from, to { border-color: transparent }
   
   padding-top: 5rem;
   padding-bottom: 5rem;
-  height: 100vh;
+  height: 50rem;
+  
   margin-right: 150px;
   margin-left: 150px;
   
