--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,15 +158,15 @@ from, to { border-color: transparent }
 
 /* THE CARD HOLDS THE FRONT AND BACK FACES */
 .thecard{
-  position: relative;
+  /* position: relative; */
   /* top: 0; */
   /* left: 0; */
-  width: 20%;
-  min-width: 20rem;
-  height: 90%;
+  
+  
+  
   /* margin:30px; */
-  margin-left:20px;
-  border-radius: 10px;
+  
+  
   transform-style: preserve-3d;
   transition: all 0.8s ease;
   /* transform: translate(-5%, -5%); */
@@ -181,32 +181,32 @@ from, to { border-color: transparent }
 
 /* THE FRONT FACE OF THE CARD, WHICH SHOWS BY DEFAULT */
  .thefront{
-  position: absolute;
+  /* position: absolute; */
   /* top: 0; */
   /* left: 0; */
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  padding:20px;
-  border-radius: 10px;
+  padding:20px; */
+  /* border-radius: 10px; */
   backface-visibility: hidden;
   overflow: hidden;
-  background: white;
-  box-shadow: 2px 2px 2px 2px rgb(225, 46, 139) ;
-  color: #000;
+  /* background: white; */
+  /* box-shadow: 2px 2px 2px 2px rgb(225, 46, 139) ; */
+  /* color: #000; */
 }
 
 /* THE BACK FACE OF THE CARD, WHICH SHOWS ON MOUSEOVER */
 .theback{
-  position: absolute;
+  /* position: relative; */
   /* top: 0; */
   /* left: 0; */
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 10px; */
   backface-visibility: hidden;
   overflow: hidden;
-  background: white;
-  color: #333;
+  /* background: white; */
+  /* color: #333; */
   text-align: center;
   transform: rotateY(180deg);
 }
