--- a/src/css/style.css
+++ b/src/css/style.css
@@ -214,9 +214,10 @@ from, to { border-color: transparent }
   text-align: center;
   position: relative;
   /* background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD;  */
-  background: white; 
+  background: #fff5f7; 
   height: 30rem;
-  margin-top: 150px;
+  /* margin-top: 150px; */
+  padding-top: 7rem;
 }
 
 .App-logo {
@@ -250,7 +251,9 @@ from, to { border-color: transparent }
 .section {
   padding: 20px 0;
   max-width: 600px;
-  margin: 0 auto; }
+  margin: 0 auto; 
+  
+}
 
 /* #endregion */
 /* #region Card */
