--- a/src/css/style.css
+++ b/src/css/style.css
@@ -630,6 +630,29 @@ from, to { border-color: transparent }
     position: absolute;
     top: 0;
     left: 0; }
+ 
+
+.reg1{
+  margin-top: -17.5rem;
+  margin-left: 2rem;
+}
+
+.reg2{
+  margin-left: 2rem;
+}
+
+.reg3{
+  margin-left: 2rem;
+}
+
+.reg4{
+  margin-left: 2rem;
+}
+
+.reg5{
+  margin-left: 2rem;
+}
+
 
 /* #endregion */
 
