--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,13 +34,17 @@
 
 
 .phoneImg {
-  width: 19.5rem;
+  width: 14.7rem;
   object-fit: contain;
 }
 
 
 
-
+/* @media screen and (max-width: 1000px) {
+  .phoneImg {
+    height: 38.9rem;
+  }
+} */
 
 
 
