--- a/src/css/style.css
+++ b/src/css/style.css
@@ -345,7 +345,8 @@ from, to { border-color: transparent }
 .cards-slider-wrapper {
   display: flex;
   position: absolute;
-  transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955); 
+  transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  
 }
   
   .cards-slider-wrapper .card {
@@ -364,7 +365,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-0 #card-0 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-0 #card-0 .details {
     opacity: 1; }
@@ -372,7 +373,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-1 #card-1 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-1 #card-1 .details {
     opacity: 1; }
@@ -380,7 +381,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-2 #card-2 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-2 #card-2 .details {
     opacity: 1; }
@@ -388,7 +389,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-3 #card-3 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-3 #card-3 .details {
     opacity: 1; }
@@ -396,7 +397,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-4 #card-4 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-4 #card-4 .details {
     opacity: 1; }
@@ -404,7 +405,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-5 #card-5 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-5 #card-5 .details {
     opacity: 1; }
@@ -412,7 +413,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-6 #card-6 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-6 #card-6 .details {
     opacity: 1; }
@@ -420,7 +421,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-7 #card-7 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-7 #card-7 .details {
     opacity: 1; }
@@ -428,7 +429,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-8 #card-8 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-8 #card-8 .details {
     opacity: 1; }
@@ -436,7 +437,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-9 #card-9 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-9 #card-9 .details {
     opacity: 1; }
@@ -444,7 +445,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-10 #card-10 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-10 #card-10 .details {
     opacity: 1; }
@@ -452,7 +453,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-11 #card-11 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-11 #card-11 .details {
     opacity: 1; }
@@ -460,7 +461,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-12 #card-12 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-12 #card-12 .details {
     opacity: 1; }
@@ -468,7 +469,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-13 #card-13 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-13 #card-13 .details {
     opacity: 1; }
@@ -476,7 +477,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-14 #card-14 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-14 #card-14 .details {
     opacity: 1; }
@@ -484,7 +485,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-15 #card-15 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-15 #card-15 .details {
     opacity: 1; }
@@ -492,7 +493,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-16 #card-16 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-16 #card-16 .details {
     opacity: 1; }
@@ -500,7 +501,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-17 #card-17 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-17 #card-17 .details {
     opacity: 1; }
@@ -508,7 +509,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-18 #card-18 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-18 #card-18 .details {
     opacity: 1; }
@@ -516,7 +517,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-19 #card-19 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-19 #card-19 .details {
     opacity: 1; }
@@ -524,7 +525,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-20 #card-20 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-20 #card-20 .details {
     opacity: 1; }
@@ -532,7 +533,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-21 #card-21 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-21 #card-21 .details {
     opacity: 1; }
@@ -540,7 +541,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-22 #card-22 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-22 #card-22 .details {
     opacity: 1; }
@@ -548,7 +549,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-23 #card-23 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-23 #card-23 .details {
     opacity: 1; }
@@ -556,7 +557,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-24 #card-24 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-24 #card-24 .details {
     opacity: 1; }
@@ -564,7 +565,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-25 #card-25 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-25 #card-25 .details {
     opacity: 1; }
@@ -572,7 +573,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-26 #card-26 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-26 #card-26 .details {
     opacity: 1; }
@@ -580,7 +581,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-27 #card-27 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-27 #card-27 .details {
     opacity: 1; }
@@ -588,7 +589,7 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-28 #card-28 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-28 #card-28 .details {
     opacity: 1; }
@@ -596,13 +597,13 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-29 #card-29 {
   opacity: 1;
   transform: scale(1);
-  background-color: #f3f3f3;
+  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-29 #card-29 .details {
     opacity: 1; }
 
 .col {
-  height: 264px;
+  height: 350px;
   position: relative; 
   overflow: hidden;
 }
@@ -611,7 +612,7 @@ from, to { border-color: transparent }
     display: block;
     width: 25%;
     height: 120%;
-    background: linear-gradient(to right, white 15%, rgba(255, 255, 255, 0) 100%);
+    /* background: linear-gradient(to right, white 15%, rgba(255, 255, 255, 0) 100%); */
     position: absolute;
     top: 0;
     left: 0;
@@ -619,7 +620,8 @@ from, to { border-color: transparent }
   .col:after {
     left: auto;
     right: 0;
-    background: linear-gradient(to left, white 15%, rgba(255, 255, 255, 0) 100%); }
+    /* background: linear-gradient(to left, white 15%, rgba(255, 255, 255, 0) 100%);  */
+  }
 
 .cards-slider {
   position: relative;
