--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,15 +39,15 @@
 }
 
 .baristaAppBox{
-margin-top: 10px;
-width: 900px;
-height: 151px;
-left: 141px;
-top: 660px;
-
-background: #F7BCD7;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 20px;
+  margin-top: 10px;
+  width: 900px;
+  height: 151px;
+  left: 141px;
+  top: 660px;
+  background: #F7BCD7;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  margin-bottom: 50px;
 }
 
 /* @media screen and (max-width: 1000px) {
