--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,14 +15,13 @@
 /* //Börjar om på sidan CSS styling */
 
 
-
 .rutan {
   background-image: url(../images/header.svg);
   background-position: center center;
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
   /* background-size: contain; */
-  height: 30rem;
+  height: 25rem;
   
 }
 
@@ -184,7 +183,7 @@ from, to { border-color: transparent }
   backface-visibility: hidden;
   overflow: hidden;
   height: 400px;
-  background-color: #fff5f7;
+  background-color: #fff8f9;
 }
 
 /* THE BACK FACE OF THE CARD, WHICH SHOWS ON MOUSEOVER */
@@ -194,7 +193,7 @@ from, to { border-color: transparent }
   text-align: center;
   transform: rotateY(180deg);
   height: 400px;
-  background-color: #fff5f7;
+  background-color: #fff8f8;
 }
 
 
@@ -668,6 +667,10 @@ from, to { border-color: transparent }
 .reg5{
   margin-top: -2.5rem;
   margin-left: 2rem;
+}
+
+.textinput{
+  
 }
 
 
