--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@
 /* //Börjar om på sidan CSS styling */
 
 
-.rutan {
+.landingImage {
   background-image: url(../images/header.svg);
   background-position: center center;
   background-repeat: no-repeat;
