--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,9 @@
   }
 } */
 
+.visiontext{
+  margin-top: -7rem;
+}
 
 
 
@@ -85,25 +88,6 @@
   background: #fdfafc;
   /* box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25); */
 } 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .landingSection {
     width: 100%;
