--- a/src/css/style.css
+++ b/src/css/style.css
@@ -630,33 +630,27 @@ from, to { border-color: transparent }
 
  .reg1{
   margin-top: -2.5rem; 
-  margin-left: 2rem;
 }
 
 .reg2{
   margin-top: -2.5rem;
-  margin-left: 2rem;
 }
 
 .reg3{
   margin-top: -2.5rem;
-  margin-left: 2rem;
 }
 
 .reg4{
   margin-top: -2.5rem;
-  margin-left: 2rem;
 }
 
 .reg5{
   margin-top: -2.5rem;
-  margin-left: 2rem;
 }
 
-.textinput{
-  
+.yogaGirl{
+  margin-top: -5rem;
 }
-
 
 /* #endregion */
 
