--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,14 +210,12 @@ from, to { border-color: transparent }
 
 
 
-
+/* THIS IS THE SLIDESHOW  */
 .App {
   text-align: center;
   position: relative;
-  /* background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F0CDCD;  */
   background: #fff5f7; 
   height: 30rem;
-  /* margin-top: 150px; */
   padding-top: 7rem;
 }
 
@@ -230,26 +228,6 @@ from, to { border-color: transparent }
   outline:none;
 }
 
-/* DEMO STYLES */
-/* .nav {
-  padding: 30px 0;
-  background-color: #222; }
-
-.nav a {
-  display: inline-block;
-  width: 100px;
-  text-align: center;
-  margin: 0 15px;
-  padding: 10px;
-  border: 1px rgba(255, 255, 255, 0.5) solid;
-  transition: all 0.3s linear;
-  text-decoration: none;
-  color: white; }
-
-.nav a.active {
-  background-color: #61DAFB;
-  color: #222; } */
-
 .section {
   padding: 20px 0;
   max-width: 600px;
@@ -257,9 +235,6 @@ from, to { border-color: transparent }
   
 }
 
-/* #endregion */
-/* #region Card */
-/* Card */
 .card {
   border: 3px #f3f3f3 solid;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
@@ -297,9 +272,6 @@ from, to { border-color: transparent }
     font-weight: bold; }
   .card .details {
     position: relative; }
-  .card p {
-    
-  }
   .card .features {
     list-style: none;
     padding: 0;
