--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,7 +69,6 @@
   text-align: center;
   text-decoration: none;
   border-radius: 25px;
-  
 }
 
 .infoPink {
@@ -77,6 +76,31 @@
   margin-right: auto;
   background: #fdfafc;
 } 
+
+/* NUMBERS IN INFOREGISTER */
+.reg1{
+  margin-top: -2.5rem; 
+}
+
+.reg2{
+  margin-top: -2.5rem;
+}
+
+.reg3{
+  margin-top: -2.5rem;
+}
+
+.reg4{
+  margin-top: -2.5rem;
+}
+
+.reg5{
+  margin-top: -2.5rem;
+}
+
+.yogaGirl{
+  margin-top: -5rem;
+}
 
 .landingSection {
     width: 100%;
@@ -115,15 +139,13 @@ from, to { border-color: transparent }
 
 
 
-/* // OUR VISION */
+/* OUR VISION DONT USE IT*/
 
 .visions {
   height: 80vh;
   width: 100%;
   background-color: white;
 }
-
-
 
 
 
@@ -169,7 +191,6 @@ from, to { border-color: transparent }
   background-color: #fff8f8;
 }
 
-
 /*This block (starts here) is merely styling for the flip card, and is NOT an essential part of the flip code */
 .thefront h1, .theback h1{
   font-family: 'zilla slab', sans-serif;
@@ -186,24 +207,10 @@ from, to { border-color: transparent }
   font-size: 12px;
   text-align: center;
 }
-  
-.phone {
-  margin-top: 150px;
-  padding-left: 100px;
-}
 
 .leftButton {
   margin-top: 150px; 
 }
-
-
-
-
-
-
-
-
-
 
 
 
@@ -232,7 +239,6 @@ from, to { border-color: transparent }
   padding: 20px 0;
   max-width: 600px;
   margin: 0 auto; 
-  
 }
 
 .card {
@@ -272,7 +278,9 @@ from, to { border-color: transparent }
     font-weight: bold; }
   .card .details {
     position: relative; }
-  .card .features {
+
+    /* THIS IS THE FEATURE STYLE, BUT WE DOESNT USE IT */
+  /* .card .features {
     list-style: none;
     padding: 0;
     margin: 0; }
@@ -293,17 +301,18 @@ from, to { border-color: transparent }
       .card .features li.icon-car {
         background: url(../images/assets/car-compact.svg);
         background-size: auto 100%;
-        background-repeat: no-repeat; }
+        background-repeat: no-repeat; } */
 
 /* #endregion */
+
+
 /* #region cards slider */
 .cards-slider-wrapper {
   display: flex;
   position: absolute;
   transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  
 }
-  
+
   .cards-slider-wrapper .card {
     flex: 1;
     min-width: 300px;
@@ -320,7 +329,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-0 #card-0 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-0 #card-0 .details {
     opacity: 1; }
@@ -328,7 +336,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-1 #card-1 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-1 #card-1 .details {
     opacity: 1; }
@@ -336,7 +343,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-2 #card-2 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-2 #card-2 .details {
     opacity: 1; }
@@ -344,7 +350,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-3 #card-3 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-3 #card-3 .details {
     opacity: 1; }
@@ -352,7 +357,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-4 #card-4 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-4 #card-4 .details {
     opacity: 1; }
@@ -360,7 +364,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-5 #card-5 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-5 #card-5 .details {
     opacity: 1; }
@@ -368,7 +371,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-6 #card-6 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-6 #card-6 .details {
     opacity: 1; }
@@ -376,7 +378,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-7 #card-7 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-7 #card-7 .details {
     opacity: 1; }
@@ -384,7 +385,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-8 #card-8 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-8 #card-8 .details {
     opacity: 1; }
@@ -392,7 +392,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-9 #card-9 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-9 #card-9 .details {
     opacity: 1; }
@@ -400,7 +399,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-10 #card-10 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-10 #card-10 .details {
     opacity: 1; }
@@ -408,7 +406,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-11 #card-11 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-11 #card-11 .details {
     opacity: 1; }
@@ -416,7 +413,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-12 #card-12 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-12 #card-12 .details {
     opacity: 1; }
@@ -424,7 +420,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-13 #card-13 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-13 #card-13 .details {
     opacity: 1; }
@@ -432,7 +427,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-14 #card-14 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-14 #card-14 .details {
     opacity: 1; }
@@ -440,7 +434,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-15 #card-15 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-15 #card-15 .details {
     opacity: 1; }
@@ -448,7 +441,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-16 #card-16 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-16 #card-16 .details {
     opacity: 1; }
@@ -456,7 +448,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-17 #card-17 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-17 #card-17 .details {
     opacity: 1; }
@@ -464,7 +455,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-18 #card-18 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-18 #card-18 .details {
     opacity: 1; }
@@ -472,7 +462,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-19 #card-19 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-19 #card-19 .details {
     opacity: 1; }
@@ -480,7 +469,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-20 #card-20 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-20 #card-20 .details {
     opacity: 1; }
@@ -488,7 +476,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-21 #card-21 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-21 #card-21 .details {
     opacity: 1; }
@@ -496,7 +483,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-22 #card-22 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-22 #card-22 .details {
     opacity: 1; }
@@ -504,7 +490,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-23 #card-23 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-23 #card-23 .details {
     opacity: 1; }
@@ -512,7 +497,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-24 #card-24 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-24 #card-24 .details {
     opacity: 1; }
@@ -520,7 +504,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-25 #card-25 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-25 #card-25 .details {
     opacity: 1; }
@@ -528,7 +511,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-26 #card-26 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-26 #card-26 .details {
     opacity: 1; }
@@ -536,7 +518,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-27 #card-27 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-27 #card-27 .details {
     opacity: 1; }
@@ -544,7 +525,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-28 #card-28 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-28 #card-28 .details {
     opacity: 1; }
@@ -552,7 +532,6 @@ from, to { border-color: transparent }
 .cards-slider.active-slide-29 #card-29 {
   opacity: 1;
   transform: scale(1);
-  /* background-color: #f3f3f3; */
   border-color: #f3f3f3; }
   .cards-slider.active-slide-29 #card-29 .details {
     opacity: 1; }
@@ -567,7 +546,6 @@ from, to { border-color: transparent }
     display: block;
     width: 25%;
     height: 120%;
-    /* background: linear-gradient(to right, white 15%, rgba(255, 255, 255, 0) 100%); */
     position: absolute;
     top: 0;
     left: 0;
@@ -575,7 +553,6 @@ from, to { border-color: transparent }
   .col:after {
     left: auto;
     right: 0;
-    /* background: linear-gradient(to left, white 15%, rgba(255, 255, 255, 0) 100%);  */
   }
 
 .cards-slider {
@@ -587,36 +564,16 @@ from, to { border-color: transparent }
     display: block;
     width: 100%;
     height: 264px;
-    /* outline: 5px solid #61DAFB; */
     position: absolute;
     top: 0;
     left: 0; }
  
-
- .reg1{
-  margin-top: -2.5rem; 
-}
-
-.reg2{
-  margin-top: -2.5rem;
-}
-
-.reg3{
-  margin-top: -2.5rem;
-}
-
-.reg4{
-  margin-top: -2.5rem;
-}
-
-.reg5{
-  margin-top: -2.5rem;
-}
-
-.yogaGirl{
-  margin-top: -5rem;
-}
-
 /* #endregion */
+
+
+
+
+
+
 
 
